projects/chd/eureka-cavinkare/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka
  name: eureka-svc
  namespace: chd-cavinkare
spec:
  ports:
    - port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    app: eureka
